[package]
name = "novapay-core-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cryptography library for signing and verification
ed25519-dalek = { version = "1", features = ["std"] }

# For random number generation (used for keypair generation)
rand = "0.8"

# For UUID generation
uuid = { version = "1", features = ["v4"] }

# For working with timestamps (UTC)
chrono = "0.4"

# Testing utilities for unit testing (optional)
# For testing this crate, you might want to add:
# [dev-dependencies]
# tokio = { version = "1", features = ["full"] }
